--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,11 +76,11 @@ repos:
     -   id: biome-check
         additional_dependencies: ["@biomejs/biome@1.9.4"]
         files: ^src/frontend/.*\.(js|ts|tsx)$
--   repo: https://github.com/gitleaks/gitleaks
-    rev: v8.29.0
-    hooks:
-    -   id: gitleaks
-        language_version: 1.23.6
+#-   repo: https://github.com/gitleaks/gitleaks
+#    rev: v8.29.0
+#    hooks:
+#    -   id: gitleaks
+#        language_version: 1.23.6
 #-   repo: https://github.com/jumanjihouse/pre-commit-hooks
 #    rev: 3.0.0
 #    hooks:
