--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
         exclude: mkdocs.yml
     -   id: mixed-line-ending
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.4
+    rev: v0.14.7
     hooks:
     - id: ruff-format
       args: [--preview]
@@ -29,7 +29,7 @@ repos:
         --preview
       ]
 -   repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.9.8
+    rev: 0.9.13
     hooks:
       - id: pip-compile
         name: pip-compile requirements-dev.in
@@ -69,9 +69,12 @@ repos:
           src/frontend/src/locales/.* |
           pyproject.toml |
           src/frontend/vite.config.ts |
+          src/backend/InvenTree/invoice_manager/.* |
+          src/backend/InvenTree/importer/.* |
+          \.github/copilot-instructions\.md |
       )$
 -   repo: https://github.com/biomejs/pre-commit
-    rev: v2.3.4
+    rev: v2.3.8
     hooks:
     -   id: biome-check
         additional_dependencies: ["@biomejs/biome@1.9.4"]
