local-prod deployment setup

--- a/contrib/container/.env
+++ b/contrib/container/.env
@@ -6,7 +6,8 @@
 COMPOSE_PROJECT_NAME=inventree
 
 # InvenTree version tag (e.g. 'stable' / 'latest' / 'x.x.x')
-INVENTREE_TAG=stable
+# Using custom local image: inventree-custom:basic-setup
+INVENTREE_TAG=basic-setup
 
 # InvenTree server URL - update this to match your server URL
 INVENTREE_SITE_URL="http://inventree.localhost"
