--- a/contrib/container/docker-compose.yml
+++ b/contrib/container/docker-compose.yml
@@ -69,8 +69,8 @@ services:
     # InvenTree web server service
     # Uses gunicorn as the web server
     inventree-server:
-        # If you wish to specify a particular InvenTree version, do so here
-        image: inventree/inventree:${INVENTREE_TAG:-stable}
+        # Using custom local image with our changes
+        image: inventree-custom:${INVENTREE_TAG:-basic-setup}
         container_name: inventree-server
         # Only change this port if you understand the stack.
         expose:
@@ -87,8 +87,8 @@ services:
 
     # Background worker process handles long-running or periodic tasks
     inventree-worker:
-        # If you wish to specify a particular InvenTree version, do so here
-        image: inventree/inventree:${INVENTREE_TAG:-stable}
+        # Using custom local image with our changes
+        image: inventree-custom:${INVENTREE_TAG:-basic-setup}
         container_name: inventree-worker
         command: invoke worker
         depends_on:
