setting backup folders

--- a/contrib/container/.env
+++ b/contrib/container/.env
@@ -23,6 +23,10 @@ INVENTREE_USE_X_FORWARDED_PROTO=True
 # By default, placed in local directory 'inventree-data'
 INVENTREE_EXT_VOLUME=./inventree-data
 
+# External backup directory on host (outside container)
+# This will be mounted separately to persist backups
+INVENTREE_BACKUP_HOST_DIR=/home/marcinek/inventree_backups
+
 # Ensure debug is false for a production setup
 INVENTREE_LOG_LEVEL=WARNING
 
@@ -61,5 +65,5 @@ INVENTREE_CACHE_PORT=6379
 # Options for gunicorn server
 INVENTREE_GUNICORN_TIMEOUT=90
 
-# Backup configuration - directory outside container
-INVENTREE_BACKUP_DIR=/home/marcinek/inventree_backups
+# Backup configuration - points to externally mounted directory
+INVENTREE_BACKUP_DIR=/home/inventree/backups
